bursts).

----------
mcadler     Date: Tue Oct 30 20:47:12 EDT 2012  CSN: CSN-leap-debug-41
                  Wed Oct 31 00:47:12 UTC 2012


Directory config/pm/leap/debuggers/sram
 sram_debugger_nallatech_acp.apm Locally Modified           40 

Directory modules/apps/debuggers
 platform-debugger.cpp     Locally Modified           40 

ACP memory tester works again.

----------
mcadler     Date: Thu Nov  1 08:11:53 EDT 2012  CSN: CSN-leap-debug-42
                  Thu Nov  1 12:11:53 UTC 2012


Directory config/pm/leap/debuggers/sram
 nallatech_fake_sram_debugger.apm Locally Modified           41 

Directory modules/apps/debuggers
 platform-debugger.bsv     Locally Modified           41 
 platform-debugger.cpp     Locally Modified           41 

- New AWB parameter naming for clarity.
- Work with smaller memories (e.g. DDR emulator using BRAM).

----------
mcadler     Date: Thu Nov  8 20:25:58 EST 2012  CSN: CSN-leap-debug-43
                  Fri Nov  9 01:25:58 UTC 2012


Directory config/pm/leap/tests/mem_perf
 mem_perf_hybrid_ml605.apm Locally Modified           42 

XST_INSERT_IOBUF was set incorrectly, leading to reset wire being dropped.

----------
mcadler     Date: Mon Nov 12 15:27:55 EST 2012  CSN: CSN-leap-debug-44
                  Mon Nov 12 20:27:55 UTC 2012


Directory config/pm/leap/tests/chantest
 chantest16_hybrid_ml605.apm Locally Added               0 

Directory modules/apps/tests/mem_perf
 mem-perf-alt.bsv          Locally Modified           43 
 mem-perf.bsv              Locally Modified           43 

- Lack of predicate on readResp allowed Bluespec to conclude it conflicted
  with doTestDone rule.

- Add ML605 PCIe channel integrity test.

----------
mcadler     Date: Sat Nov 17 09:28:06 EST 2012  CSN: CSN-leap-debug-45
                  Sat Nov 17 14:28:06 UTC 2012


Directory modules/apps/debuggers
 platform-debugger.cpp     Locally Modified           44 

Check that memory is sized properly by looking for address aliases.