@@ -1200,3 +1200,14 @@ Directory modules/apps/debuggers
  platform-debugger.cpp     Locally Modified           44 
 
 Check that memory is sized properly by looking for address aliases.
+
+----------
+mcadler     Date: Mon Nov 19 15:24:19 EST 2012  CSN: CSN-leap-debug-46
+                  Mon Nov 19 20:24:19 UTC 2012
+
+
+Directory modules/apps/debuggers
+ platform-debugger.bsv     Locally Modified           45 
+ platform-debugger.cpp     Locally Modified           45 
+
+Add DRAM controller's debug scan state to the debug scan chain.
